# DIGBA

./: .env.example  .gitignore  README.md  STACK.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  start.sh
backend/: Dockerfile  main.py
backend/api/routes/: health.py  rasff.py  scoring.py
backend/config/: settings.py
backend/core/pipeline/ndvi/: anomaly.py  historical_ndvi.json  ndvi.py  service.py
backend/core/pipeline/operator/: service.py
backend/core/pipeline/phenology/: crop_calendar.json  service.py
backend/core/pipeline/rasff/: service.py
backend/core/pipeline/weather/: generate_weather_climatology.py  service.py  weather.py  weather_climatology.json
backend/core/scoring/: engine.py
backend/data/rasff/: rasff_senegal_rejets.csv  schema.sql
backend/db/: database.py  seed.py
backend/ml/: __init__.py  features.py  metadata.json  service.py  train.py
backend/models/: rasff.py  schemas.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  sesame-seeds.avif  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/assets/images/: cashew-nuts.avif  millet-grain.avif  sorghum.avif
frontend/src/components/forms/: ScoreForm.tsx
frontend/src/components/layout/: Layout.tsx  Navbar.tsx
frontend/src/components/ui/: Badge.tsx  (+2 more)
frontend/src/data/: countries.ts
frontend/src/hooks/: useTour.ts
frontend/src/i18n/: LangContext.tsx  translations.ts
frontend/src/services/: api.ts
frontend/src/store/: historyStore.ts
frontend/src/types/: api.ts
frontend/src/utils/: generateEudrPdf.ts
(+12 files in other folders)
