[project]
name = "digba"
version = "1.0.0"
description = "DIGBA — Système de scoring de risque alimentaire pour l'export d'anacarde sénégalais"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Pipeline satellite
    "rasterio>=1.5.0",
    "numpy>=2.4.3",
    "matplotlib>=3.10.8",
    # Pipeline météo & HTTP
    "requests>=2.32.5",
    "httpx>=0.27.0",
    # Base de données
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    # Data science (calibration V2)
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    # Config & utilitaires
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
